<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="#4a4a4a"
    android:padding="20dp"
    android:layout_margin="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_dialog"
        android:layout_margin="10dp"
        android:lines="2"
        android:textColor="@color/text_color_white"
        android:textSize="15sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_continue"
            android:textSize="15sp"
            android:layout_marginRight="20dp"
            android:textColor="@color/text_color_blue"/>
        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_cancle"
            android:textColor="@color/text_color_blue"
            android:textSize="15sp"/>
    </LinearLayout>
</RelativeLayout>