<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/default_indi_bg"
            android:scaleType="fitXY"/>
        <ImageView
            android:id="@+id/iv_individual_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_return"/>
        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@drawable/head"/>
        <TextView
            android:id="@+id/tv_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/iv_header"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_color_white"
            android:textSize="15sp"
            android:text="@string/user_state"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:padding="5dp"
        android:textSize="12sp"
        android:textColor="@color/text_color_gray"
        android:background="#f7f7f7"
        android:text="@string/setting" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/center_night_mode"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_black"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:text="@string/night_mode"
                        />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/text_color_gray"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/other_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/center_setting" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:text="@string/other_setting"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/text_color_gray"/>
   <LinearLayout
       android:id="@+id/ll_weather_setting"
       android:layout_marginTop="5dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="5dp"
       android:orientation="horizontal">
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/weather_cloudy"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/text_color_black"
           android:textSize="15sp"
           android:layout_marginLeft="10dp"
           android:text="天气预报"/>
   </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/text_color_gray"/>
    <TextView
        android:id="@+id/tv_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_black"
        android:padding="5dp"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:text="上传用户新头像"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/text_color_gray"/>

</LinearLayout>