<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color">
    <!--标题栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_mv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_return"/>
        <TextView
            android:id="@+id/tv_mv_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#2c2c2d"/>
    </LinearLayout>
    <!--可滚动的scrollview-->
    <com.oy.widget.TypeMoreView.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="230dp">
                <ImageView
                    android:id="@+id/iv_mv_cover"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/movie_placeholder_3"
                    android:layout_marginBottom="12dp"/>
                <TextView
                    android:id="@+id/tv_mv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="25dp"
                    android:textColor="#f00"
                    android:textSize="25sp"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@+id/iv_mv_line"
                    android:text="123"/>
                <ImageView
                    android:id="@+id/iv_mv_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/score_line"
                    android:layout_alignBottom="@+id/iv_mv_cover"
                    android:padding="5dp"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            <!--电影票 评论 分享-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/selector_ticket"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/selector_grade"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:drawablePadding="3dp"
                    android:text="@string/movie_score"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_image"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_gray"
                android:layout_marginBottom="1dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/color_gray"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="@string/movie_story"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">
                <ImageView
                    android:id="@+id/iv_mv_head"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/head"/>
                <TextView
                    android:id="@+id/tv_mv_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/iv_mv_head"
                    android:text="123"
                    android:textSize="12sp"
                    android:textColor="@color/text_color_blue"/>
                <TextView
                    android:id="@+id/tv_mv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_mv_user"
                    android:layout_alignLeft="@+id/tv_mv_user"
                    android:text="1235"
                    android:textSize="12sp"
                    android:textColor="@color/text_color_blue"/>
                <TextView
                    android:id="@+id/tv_mv_praisenum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:drawableLeft="@drawable/laud_selected"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_mv_st"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_black"
                android:padding="5dp"
                android:textSize="16sp"/>
            <com.ms.square.android.expandabletextview.ExpandableTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
                android:id="@+id/expand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                expandableTextView:maxCollapsedLines="8"
                expandableTextView:animDuration="200"
                android:padding="5dp">
                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/text_color_black"
                    />
                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_gravity="right|bottom"
                    android:background="@android:color/transparent"/>
            </com.ms.square.android.expandabletextview.ExpandableTextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_gray"
                android:layout_marginBottom="1dp"/>
            <!--一个电影表-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:background="@color/color_gray"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_mv_tab"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_tab"
                    android:textSize="12sp"
                    android:padding="5dp"
                    android:textColor="@color/text_color_gray"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/iv_mv_keyword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gross_selected"/>
                    <ImageView
                        android:id="@+id/iv_mv_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/still_default"/>
                    <ImageView
                        android:id="@+id/iv_mv_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/plot_default"/>
                </LinearLayout>
            </LinearLayout>
            <!--剧照-->
            <HorizontalScrollView
                android:id="@+id/hsv_mv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <LinearLayout
                    android:id="@+id/ll_mv_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                </LinearLayout>
            </HorizontalScrollView>
            <!--影片信息-->
            <TextView
                android:id="@+id/tv_mv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:padding="5dp"
                android:textColor="@color/text_color_black"
                android:visibility="gone"/>
        <!--评论区-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/color_gray">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_comment"
                    android:textSize="12sp"
                    android:padding="5dp"
                    android:textColor="@color/text_color_gray"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/comment_image"/>
            </LinearLayout>
            <com.oy.widget.TypeMoreView.MyRecycleView
                android:id="@+id/rv_mv_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.oy.widget.TypeMoreView.MyRecycleView>
        </LinearLayout>
    </com.oy.widget.TypeMoreView.MyScrollView>
</LinearLayout>